package com.exasol.adapter.dynamodb.documentnode;

/**
 * Interface for simple values.
 */
@java.lang.SuppressWarnings("squid:S119") // VisitorType does not fit naming conventions.
public interface DocumentValue<VisitorType> extends DocumentNode<VisitorType> {
}
